deploy/kustomization/base/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: frontend
        image: hub.k8s.ucar.edu/musicbox/frontend:latest
        ports:
        - containerPort: 80
          name: http
