deploy/kustomization/base/model-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-runner
spec:
  replicas: 2
  selector:
    matchLabels:
      app: model-runner
  template:
    metadata:
      labels:
        app: model-runner
    spec:
      containers:
      - name: model-runner
        image: hub.k8s.ucar.edu/musicbox/backend:latest
        command: ["python"]
        args: 
          - "-u"
          - "/music-box-interactive/interactive/rabbit_mq_model_runner.py"
        volumeMounts: 
          - name: db-data
            mountPath: /music-box-interactive/interactive/db-data
          - name: partmc-data
            mountPath: /partmc/partmc-volume
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: partmc-data
          persistentVolumeClaim:
            claimName: partmc-data
