deploy/kustomization/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
  - port: 80
    targetPort: http
    name: http
  type: ClusterIP
