deploy/kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: incommon
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - musicbox.k8s.ucar.edu
    - musicbox-devel.acom.ucar.edu
    secretName: musicbox-tls-secret
  rules:
  - host: musicbox.k8s.ucar.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: musicbox-devel.acom.ucar.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
